force-app/main/default/objects/Plantilla_Reporte__c/fields/Es_Default__c.field-meta.xml
<CustomField>
    <fullName>Es_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca la variante por defecto para el reporte. Solo deberia haber una marcada por reporte; la app garantiza ese invariante en saveVariant.</description>
    <label>Es default</label>
    <type>Checkbox</type>
</CustomField>