force-app/main/default/objects/Plantilla_Reporte__c/fields/Es_Publica__c.field-meta.xml
<CustomField>
    <fullName>Es_Publica__c</fullName>
    <defaultValue>true</defaultValue>
    <description>true = variante visible para todos los usuarios; false = solo visible para el creador (Owner_UserId__c).</description>
    <label>Es publica</label>
    <type>Checkbox</type>
</CustomField>