force-app/main/default/objects/Plantilla_Reporte__c/fields/Owner_UserId__c.field-meta.xml
<CustomField>
    <fullName>Owner_UserId__c</fullName>
    <description>UserId del creador de la variante. Usado para filtrar variantes privadas (Es_Publica__c=false).</description>
    <label>Owner UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>