force-app/main/default/objects/Plantilla_Reporte__c/fields/Variante_Id__c.field-meta.xml
<CustomField>
    <fullName>Variante_Id__c</fullName>
    <description>Identificador unico de la variante del reporte (formato uuid corto). Junto con ID_del_Reporte__c forma la PK logica de una variante.</description>
    <externalId>true</externalId>
    <label>Variante Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>