force-app/main/default/objects/Plantilla_Reporte__c/fields/Variante_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Variante_Nombre__c</fullName>
    <description>Nombre legible de la variante (ej. Vista ejecutiva, Solo abiertos del mes, Por consultor).</description>
    <label>Variante Nombre</label>
    <length>120</length>
    <type>Text</type>
</CustomField>